examples/neg/parsing/blockargs.effekt
effect Exc(msg: String): Unit

def foo[R] { f : R / Exc }: R = <>

def whatIWanted[R] { f : () => R / Exc }: R = <>